MLE-23004 - Cleaning up compiler warnings